5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1585_2905.log
== SUBMITION (2019-04-01 23:14:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
l1 = float(input("Valor de L1: "))
l2 = float(input("Valor de L2: "))
l3 = float(input("Valor de L3: "))
s = (l1 + l2 + l3) / 2
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area, 5))
-- EXECUTION TIME:
0.135929
-- ERROR:
  File "/home/codebench/codes/1585/2905/main.py", line 4
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:15:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
l1 = float(input("Valor de L1: "))
l2 = float(input("Valor de L2: "))
l3 = float(input("Valor de L3: "))
s = (l1 + l2 + l3) / 2
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area, 5))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:16:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
l1 = float(input("Valor de L1: "))
l2 = float(input("Valor de L2: "))
l3 = float(input("Valor de L3: "))
s = (l1 + l2 + l3) / 2
area = sqrt(s*(s-l1)*(s-l2)*(s-l3))
print(round(area, 5))
-- EXECUTION TIME:
0.149101
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
